# A3Data---ML-Engineer

./: README.md
iris_pipeline/: Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
iris_pipeline/conf/base/: parameters.yml
iris_pipeline/src/iris_pipeline/: __main__.py  model.joblib  pipeline_registry.py  settings.py
iris_pipeline/src/iris_pipeline/pipelines/data_engineering/: nodes.py  pipeline.py
iris_pipeline/src/iris_pipeline/pipelines/model_training/: nodes.py  pipeline.py
