[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "iris_pipeline"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
iris_pipeline = "iris_pipeline.__main__:main"

[tool.kedro]
package_name = "iris_pipeline"
project_name = "iris_pipeline"
kedro_init_version = "0.19.5"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "iris_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
